--- a/skills/weapomskill.yml
+++ b/skills/weapomskill.yml
@@ -2,10 +2,11 @@ Tatsukitsune7_Beam_skills:
   Skills:
   - raytraceto{
       entitySkill=[
-        - damage{a=20;pi=true;ii=true} 
+        - damage{a="<caster.damage> * 1.2";ii=true;pi=true}
+        - particleline{particle=flame;amount=1;fromOrigin=true} @Origin
       ];
       locationSkill=[
-        - particles{p=flame;a=20;s=0.2;hS=0.1;vS=0.1}
+        - particleline{particle=flame;amount=1;fromOrigin=true} @Origin
       ];
       startyoffset=1;
       targetyoffset=1;
