--- a/skills/weapomskill.yml
+++ b/skills/weapomskill.yml
@@ -21,10 +21,10 @@ Tatsukitsune7_Blade_skills:
       - e:s{s=block.bell.use;p=0.7}@self
     ];
     ot=[
-      - e:p{p=reverse_portal;a=1;offset=2;fo=true}
+      - e:p{p=reverse_portal;a=1;fo=true}
     ];
     oh=[
       - damage{a=10}
     ];
-    fo=true;hnp=true;
+    fo=true;hnp=true;bulletType=DISPLAY;mat=netherite_sword;
     origin=@forward{a=<random.-1to1>;so=<random.-5to5>;y=<random.1to3>}} @TL
