--- a/skills/weapomskill.yml
+++ b/skills/weapomskill.yml
@@ -26,5 +26,5 @@ Tatsukitsune7_Blade_skills:
     oh=[
       - damage{a=10}
     ];
-    fo=true;hnp=true;bulletType=DISPLAY;mat=netherite_sword;
+    fo=true;hnp=true;v=6;bulletType=DISPLAY;mat=diamond_sword;scale=1.25,1.25,1.25;yaw=3.14;pitch=1.57;roll=0.785;
     origin=@forward{a=<random.-1to1>;so=<random.-5to5>;y=<random.1to3>}} @TL
