--- a/skills/weapomskill.yml
+++ b/skills/weapomskill.yml
@@ -27,4 +27,5 @@ Tatsukitsune7_Blade_skills:
       - damage{a=10}
     ];
     fo=true;hnp=true;v=6;bulletType=DISPLAY;mat=diamond_sword;scale=1.25,1.25,1.25;yaw=3.14;pitch=1.57;roll=0.785;
+    repeat=4;repeati=3;
     origin=@forward{a=<random.-1to1>;so=<random.-5to5>;y=<random.1to3>}} @TL
