--- a/skills/weapomskill.yml
+++ b/skills/weapomskill.yml
@@ -17,6 +17,12 @@ Tatsukitsune7_Beam_skills:
 Tatsukitsune7_Blade_skills:
   Cooldown: 2
   Skills:
+  - skill{s=Tatsukitsune7_Blade_Process;repeat=2;repeati=3}
+
+
+Tatsukitsune7_Blade_Process:
+  Cooldown: 2
+  Skills:
   - projectile{
     ot=[
       - e:p{p=reverse_portal;a=1;fo=true}
