--- a/items/weapon.yml
+++ b/items/weapon.yml
@@ -32,4 +32,4 @@ Tatsukitsune7_Blade:
       ArmorToughness: -0.25 MULTIPLY_BASE
   Group: 'Melee-Weapon'
   Skills:
-  - skill{s=Tatsukitsune7_Blade_skills;repeat=2;repeati=3} @self ~onSwing
+  - skill{s=Tatsukitsune7_Blade_skills} @self ~onSwing
