--- a/skills/weapomskill.yml
+++ b/skills/weapomskill.yml
@@ -17,12 +17,6 @@ Tatsukitsune7_Beam_skills:
 Tatsukitsune7_Blade_skills:
   Cooldown: 2
   Skills:
-  - skill{s=Tatsukitsune7_Blade_Process;repeat=2;repeati=3}
-
-
-Tatsukitsune7_Blade_Process:
-  Cooldown: 2
-  Skills:
   - projectile{
     ot=[
       - e:p{p=reverse_portal;a=1;fo=true}
@@ -31,4 +25,4 @@ Tatsukitsune7_Blade_Process:
       - damage{a=<caster.damage>;ii=true;pi=true}
     ];
     fo=true;hnp=true;v=36;bulletType=DISPLAY;mat=diamond_sword;scale=1.25,1.25,1.25;yaw=0;pitch=1.57;roll=0.785;
-    origin=@forward{a=<random.-1to1>;so=<random.-5to5>;y=<random.1to3>}} @TL
+    origin=@forward{a=<random.-1to1>;so=<random.-5to5>;y=<random.1to3>}} @TL repeat=2;repeati=3
