--- a/skills/weapomskill.yml
+++ b/skills/weapomskill.yml
@@ -15,7 +15,13 @@ Tatsukitsune7_Beam_skills:
     origin=@forward{a=<random.-1to1>;so=<random.-5to5>;y=<random.1to3>}} @TL
 
 Tatsukitsune7_Blade_skills:
-  Cooldown: 2
+  Cooldown: 1
+  Skills:
+  - skill{s=Tatsukitsune7_Blade_Process1}
+  - skill{s=Tatsukitsune7_Blade_Process2}
+  - skill{s=Tatsukitsune7_Blade_Process3}
+
+Tatsukitsune7_Blade_Process1:
   Skills:
   - projectile{
     ot=[
@@ -25,4 +31,28 @@ Tatsukitsune7_Blade_skills:
       - damage{a=<caster.damage>;ii=true;pi=true}
     ];
     fo=true;hnp=true;v=36;bulletType=DISPLAY;mat=diamond_sword;scale=1.25,1.25,1.25;yaw=0;pitch=1.57;roll=0.785;
-    origin=@forward{a=<random.-1to1>;so=<random.-5to5>;y=<random.1to3>}} @TL repeat=2;repeati=3
+    origin=@forward{a=<random.-1to1>;so=<random.-5to5>;y=<random.1to3>}} @TL
+    
+Tatsukitsune7_Blade_Process2:
+  Skills:
+  - projectile{
+    ot=[
+      - e:p{p=reverse_portal;a=1;fo=true}
+    ];
+    oh=[
+      - damage{a=<caster.damage>;ii=true;pi=true}
+    ];
+    fo=true;hnp=true;v=36;bulletType=DISPLAY;mat=diamond_sword;scale=1.25,1.25,1.25;yaw=0;pitch=1.57;roll=0.785;
+    origin=@forward{a=<random.-1to1>;so=<random.-4to4>;y=<random.1to3>}} @TL
+
+Tatsukitsune7_Blade_Process3:
+  Skills:
+  - projectile{
+    ot=[
+      - e:p{p=reverse_portal;a=1;fo=true}
+    ];
+    oh=[
+      - damage{a=<caster.damage>;ii=true;pi=true}
+    ];
+    fo=true;hnp=true;v=36;bulletType=DISPLAY;mat=diamond_sword;scale=1.25,1.25,1.25;yaw=0;pitch=1.57;roll=0.785;
+    origin=@forward{a=<random.-1to1>;so=<random.-3to3>;y=<random.1to3>}} @TL
