--- a/skills/weapomskill.yml
+++ b/skills/weapomskill.yml
@@ -15,7 +15,7 @@ Tatsukitsune7_Beam_skills:
     origin=@forward{a=<random.-1to1>;so=<random.-5to5>;y=<random.1to3>}} @TL
 
 Tatsukitsune7_Blade_skills:
-  Cooldown:0.5
+  Cooldown: 0.25
   Conditions:
   - wearing{s=HAND;i=Tatsukitsune7_Blade}
   - hasMana{a=>35;
@@ -23,9 +23,10 @@ Tatsukitsune7_Blade_skills:
       - message{m="&cマナが足りません。"} @self 
     ]}
   - matCooldown{m=DIAMOND_SWORD} false 
+  - crouching false 
   Skills:
-  - setMaterialCooldown{m=DIAMOND_SWORD;d=10} @self
   - modifyMana{a=-35} @self
+  - setMaterialCooldown{m=DIAMOND_SWORD;d=5} @self
   - skill{s=Tatsukitsune7_Blade_Process1}
   - skill{s=Tatsukitsune7_Blade_Process2}
   - skill{s=Tatsukitsune7_Blade_Process3}
