--- a/items/weapon.yml
+++ b/items/weapon.yml
@@ -33,3 +33,4 @@ Tatsukitsune7_Blade:
   Group: 'Melee-Weapon'
   Skills:
   - skill{s=Tatsukitsune7_Blade_skills} @self ~onSwing
+  - skill{s=Tatsukitsune7_Blade_skills} @self ~onUse
