--- a/skills/weapomskill.yml
+++ b/skills/weapomskill.yml
@@ -88,6 +88,6 @@ Tatsukitsune7_Blade_Sskills:
       - sound{s=block.trial_spawner.ominous_activate;v=0.5;p=2;audience=caster}
     ];
     oH=[
-      - damage{a=<caster.damage>;ii=true;pi=true}
+      - damage{a="<caster.damage>";ii=true;pi=true}
     ];
     repeat=16;repeati=1}
