--- a/skills/weapomskill.yml
+++ b/skills/weapomskill.yml
@@ -40,8 +40,8 @@ Tatsukitsune7_Blade_Process1:
     oh=[
       - damage{a=<caster.damage>;ii=true;pi=true}
     ];
-    fo=true;hnp=true;v=36;bulletType=DISPLAY;mat=diamond_sword;scale=1.25,1.25,1.25;yaw=0;pitch=1.57;roll=0.785;
-    origin=@forward{a=<random.-1to1>;so=<random.-2to2>;y=<random.1to3>}} @TL
+    fo=true;hp=false;v=36;bulletType=DISPLAY;mat=diamond_sword;scale=1.25,1.25,1.25;yaw=0;pitch=1.57;roll=0.785;
+    origin=@forward{a=<random.-1to1>;so=<random.-2to2>;y=<random.1to3>}} @TL{d=20}
     
 Tatsukitsune7_Blade_Process2:
   Skills:
@@ -52,8 +52,8 @@ Tatsukitsune7_Blade_Process2:
     oh=[
       - damage{a=<caster.damage>;ii=true;pi=true}
     ];
-    fo=true;hnp=true;v=36;bulletType=DISPLAY;mat=diamond_sword;scale=1.25,1.25,1.25;yaw=0;pitch=1.57;roll=0.785;
-    origin=@forward{a=<random.-1to1>;so=<random.-2to2>;y=<random.1to3>}} @TL
+    fo=true;hp=false;v=36;bulletType=DISPLAY;mat=diamond_sword;scale=1.25,1.25,1.25;yaw=0;pitch=1.57;roll=0.785;
+    origin=@forward{a=<random.-1to1>;so=<random.-2to2>;y=<random.1to3>}} @TL{d=20}
 
 Tatsukitsune7_Blade_Process3:
   Skills:
@@ -64,8 +64,8 @@ Tatsukitsune7_Blade_Process3:
     oh=[
       - damage{a=<caster.damage>;ii=true;pi=true}
     ];
-    fo=true;hnp=true;v=36;bulletType=DISPLAY;mat=diamond_sword;scale=1.25,1.25,1.25;yaw=0;pitch=1.57;roll=0.785;
-    origin=@forward{a=<random.-1to1>;so=<random.-2to2>;y=<random.1to3>}} @TL
+    fo=true;hp=false;v=36;bulletType=DISPLAY;mat=diamond_sword;scale=1.25,1.25,1.25;yaw=0;pitch=1.57;roll=0.785;
+    origin=@forward{a=<random.-1to1>;so=<random.-2to2>;y=<random.1to3>}} @TL{d=20}
 
 Tatsukitsune7_Blade_Sskills:
   Cooldown: 20
@@ -80,7 +80,7 @@ Tatsukitsune7_Blade_Sskills:
   Skills:
   - modifyMana{a=-200} @self
   - slash{
-    y=1.8;w=4;h=2;mpd=true;a=340;fo=1;
+    y=1.8;w=4;h=2;mpd=true;a=340;fo=1;hp=false;
     oP=[
        - effect:particles{p=White_Smoke;audience=caster} 
     ];roll=<random.-65to245>;
