--- a/items/weapon.yml
+++ b/items/weapon.yml
@@ -32,3 +32,4 @@ Tatsukitsune7_Blade:
   Skills:
   - skill{s=Tatsukitsune7_Blade_skills} @self ~onSwing
   - skill{s=Tatsukitsune7_Blade_Sskills} @self ~onUse
+  - skill{s=Tatsukitsune7_Blade_Sskills} @self ~onInteract ?!crouching
