--- a/skills/weapomskill.yml
+++ b/skills/weapomskill.yml
@@ -35,10 +35,13 @@ Tatsukitsune7_Blade_Process1:
   Skills:
   - projectile{
     ot=[
-      - e:p{p=reverse_portal;a=1;fo=true}
+      - e:p{p=Totem_Of_Undying;a=2;fo=true}
     ];
     oh=[
       - damage{a=<caster.damage>;ii=true;pi=true}
+    ];
+    os=[
+      - e:s{s=block.respawn_anchor.charge} @self
     ];
     fo=true;hp=false;hnp=true;v=36;bulletType=DISPLAY;mat=diamond_sword;scale=1.25,1.25,1.25;yaw=0;pitch=1.57;roll=0.785;
     origin=@forward{a=<random.-1to1>;so=<random.-2to2>;y=<random.1to3>}} @TL{d=20}
@@ -47,10 +50,13 @@ Tatsukitsune7_Blade_Process2:
   Skills:
   - projectile{
     ot=[
-      - e:p{p=reverse_portal;a=1;fo=true}
+      - e:p{p=Totem_Of_Undying;a=2;fo=true}
     ];
     oh=[
       - damage{a=<caster.damage>;ii=true;pi=true}
+    ];
+    os=[
+      - e:s{s=block.respawn_anchor.charge} @self
     ];
     fo=true;hp=false;hnp=true;v=36;bulletType=DISPLAY;mat=diamond_sword;scale=1.25,1.25,1.25;yaw=0;pitch=1.57;roll=0.785;
     origin=@forward{a=<random.-1to1>;so=<random.-2to2>;y=<random.1to3>}} @TL{d=20}
@@ -59,10 +65,13 @@ Tatsukitsune7_Blade_Process3:
   Skills:
   - projectile{
     ot=[
-      - e:p{p=reverse_portal;a=1;fo=true}
+      - e:p{p=Totem_Of_Undying;a=2;fo=true}
     ];
     oh=[
       - damage{a=<caster.damage>;ii=true;pi=true}
+    ];
+    os=[
+      - e:s{s=block.respawn_anchor.charge} @self
     ];
     fo=true;hp=false;hnp=true;v=36;bulletType=DISPLAY;mat=diamond_sword;scale=1.25,1.25,1.25;yaw=0;pitch=1.57;roll=0.785;
     origin=@forward{a=<random.-1to1>;so=<random.-2to2>;y=<random.1to3>}} @TL{d=20}
