--- a/skills/weapomskill.yml
+++ b/skills/weapomskill.yml
@@ -40,6 +40,7 @@ Tatsukitsune7_Blade_Process1:
     ];
     oh=[
       - damage{a=<caster.damage>;ii=true;pi=true}
+      - e:p{p=Sweep_Attack;a=1}
     ];
     fo=true;hp=false;hnp=true;v=36;bulletType=DISPLAY;mat=diamond_sword;scale=1.25,1.25,1.25;yaw=0;pitch=1.57;roll=0.785;
     origin=@forward{a=<random.-1to1>;so=<random.-2to2>;y=<random.1to3>}} @TL{d=20}
@@ -52,6 +53,7 @@ Tatsukitsune7_Blade_Process2:
     ];
     oh=[
       - damage{a=<caster.damage>;ii=true;pi=true}
+      - e:p{p=Sweep_Attack;a=1}
     ];
     fo=true;hp=false;hnp=true;v=36;bulletType=DISPLAY;mat=diamond_sword;scale=1.25,1.25,1.25;yaw=0;pitch=1.57;roll=0.785;
     origin=@forward{a=<random.-1to1>;so=<random.-2to2>;y=<random.1to3>}} @TL{d=20}
@@ -64,6 +66,7 @@ Tatsukitsune7_Blade_Process3:
     ];
     oh=[
       - damage{a=<caster.damage>;ii=true;pi=true}
+      - e:p{p=Sweep_Attack;a=1}
     ];
     fo=true;hp=false;hnp=true;v=36;bulletType=DISPLAY;mat=diamond_sword;scale=1.25,1.25,1.25;yaw=0;pitch=1.57;roll=0.785;
     origin=@forward{a=<random.-1to1>;so=<random.-2to2>;y=<random.1to3>}} @TL{d=20}
